Correct tooltip coords in nsWebBrowser when frames are involved.  Bug 171229, r+sr=roc